# image_dice

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-build-windows.yaml
src/: config.rs  lib.rs  main.rs
